# OpenEmpires

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: build-and-deploy.yml
Open Empires/: Open Empires.slnx
Open Empires/Assets/Editor/: CursorTextureImporter.cs  OpenEmpires.Editor.asmdef
Open Empires/Assets/InputActions/: RTSInputActions.inputactions
Open Empires/Assets/Materials/: M_Crossbowman.mat  M_Formation_Marker.mat  M_Knight.mat  M_KnightArmor.mat  M_KnightPanache.mat  M_ManAtArms.mat  M_ManAtArmsArmor.mat  M_Resource_Berry.mat  M_Resource_Gold.mat  M_Resource_Stone.mat  M_Resource_Tree.mat  M_Selection_Ring.mat  M_Spearman.mat  M_Terrain_Grass.mat  M_Unit_Villager.mat
Open Empires/Assets/Scenes/: SampleScene.unity
Open Empires/Assets/ScriptableObjects/: SimulationConfig.asset
Open Empires/Assets/Scripts/: OpenEmpires.Runtime.asmdef  RTSInputActions.cs
Open Empires/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
backend/: .gitignore  Cargo.toml  render.yaml  test_server.sh
backend/src/: config.rs  main.rs
backend/src/api/: analytics.rs  dashboard.rs  handlers.rs  mod.rs  ws.rs
backend/src/models/: dashboard_messages.rs  match_session.rs  messages.rs  mod.rs  player.rs  queue.rs
backend/src/services/: geolocation.rs  matchmaker.rs  metrics.rs  metrics_db.rs  mod.rs  queue_manager.rs  relay.rs  session_manager.rs
backend/static/dashboard/: dashboard.css  dashboard.js  index.html
docs/: index.html
(+149 files in other folders)
