[package]
name = "openempires-matchmaking"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
maxminddb = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
rand = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
